# opencamlib

./: .clang-format  .editorconfig  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  MANIFEST.in  README  README.rst  VERSION  arc.cpp  arc.h  ball_cutter_tst_1.py  ball_cutter_tst_2.py  ballcutter.cpp  bug20100329.py  bug20100402.py  bullcutter.cpp  camala.cpp  camala.h  camvtk.py  cutter.cpp  cutter.h  cylcutter.cpp  dockerinit.sh  drop_cutter_tst_1.py  drop_cutter_tst_4.py  gargantini.py  install.sh  install_boost.sh  kdtree.cpp  kdtree.h  kdtree_debub_0.py  kdtree_debug_1.py  kdtree_debug_3.py  kdtree_movie1.py  kdtree_movie2.py  (+61 more)
cpp_examples/cutsim1/: CMakeLists.txt  cutsim.h  cutsim.hpp  cutsim1.cpp  gldata.cpp  gldata.h  glwidget.cpp  glwidget.h  main.cpp  point.h
cpp_examples/cutsim2/: CMakeLists.txt  cutsim.h  main.cpp
cpp_examples/qt_opengl/: CMakeLists.txt  nehewidget.cpp  nehewidget.h
cpp_examples/qt_vtk_renderwindow/: CMakeLists.txt  RenderWindow.cpp
cpp_examples/vbo/: CMakeLists.txt  glwidget.cpp  glwidget.h
src/: CMakeLists.txt  DebSourcePPA.cmake  Doxyfile  arc.cpp  arc.h  ballcutter.cpp  batchdropcutter.cpp  batchdropcutter.h  batchpushcutter.cpp  batchpushcutter.h  bbox.cpp  bbox.h  brent_zero.h  bullcutter.cpp  ccpoint.cpp  ccpoint.h  clfilter.cpp  clfilter.h  clpoint.cpp  clpoint.h  compoundcutter.cpp  conecutter.cpp  cutter.cpp  cutter.h  cylcutter.cpp  debian_copyright.txt  debian_package_description.txt  epos.cpp  epos.h  fiber.cpp  fiber.h  gcc_version.cmake  get_revision.py  kdtree.cpp  kdtree.h  kdtree2.cpp  kdtree2.h  line.cpp  line.h  manual.h  (+44 more)
src/algo/: CMakeLists.txt  adaptivepathdropcutter.cpp  adaptivepathdropcutter.h  adaptivepathdropcutter_py.h  adaptivewaterline.cpp  adaptivewaterline.h  adaptivewaterline.hpp  adaptivewaterline_py.h  adaptivewaterline_py.hpp  batchdropcutter.cpp  batchdropcutter.h  batchdropcutter_py.h  batchpushcutter.cpp  batchpushcutter.h  batchpushcutter.hpp  batchpushcutter_py.h  batchpushcutter_py.hpp  clfilter.cpp  clfilter.h  clsurface.h  clsurface.hpp  facegrid.cpp  facegrid.h  fiber.cpp  fiber.h  fiber.hpp  fiber_py.h  fiber_py.hpp  fiberpushcutter.cpp  fiberpushcutter.h  fiberpushcutter.hpp  halfedgediagram.cpp  halfedgediagram.h  halfedgediagram2.h  interval.cpp  interval.h  interval.hpp  kdnode3.h  kdtree3.cpp  kdtree3.h  (+42 more)
src/attic/: OffsetEllipse.cpp  OffsetEllipse_awcomments.cpp  OffsetEllipse_awcomments.h  ball_cutter_tst_1.py  bug20100329.py  gargantini.py  halfedgediagram_old.hpp  kdtree.cpp  kdtree.h  kdtree2.cpp  kdtree2.h  makefile_old  ocode.cpp  ocode.h  oct_test1.py  oct_test2.py  oct_test3.py  octree.cpp  octree.h  octree_old.cpp  pfinish.cpp  pfinish.h  pfinish_tst_1.py  pft_visitor.h  readme_attic.txt  stlsurf_read_from_file.cpp  triangle_zslice_triangles.cpp  voronoi_trash.cpp  waterline_4_weave.py  weave.cpp  weave.h  weave_py.h  weave_typedef.h
src/common/: CMakeLists.txt  brent_zero.h  brent_zero.hpp  clfilter.hpp  halfedgediagram.hpp  kdnode.hpp  kdtree.h  kdtree.hpp  kdtree3.h  lineclfilter.cpp  lineclfilter.hpp  lineclfilter_py.h  lineclfilter_py.hpp  numeric.cpp  numeric.hpp
src/cutsim/: CMakeLists.txt  gldata.cpp  gldata.h  gldata.hpp  glwidget.cpp  glwidget.h  glwidget.hpp  marching_cubes.cpp  marching_cubes.h  marching_cubes.hpp  mc_tables.h  ocode.cpp  octnode.cpp  octnode.h  octnode.hpp  octnode_py.h  octree.cpp  octree.h  octree.hpp  octree2.cpp  octree2.h  octree_py.h  octree_py.hpp  p3.h  p3.hpp  volume.cpp  volume.h  volume.hpp  volume_wrap.h  volume_wrap.hpp
src/cutters/: CMakeLists.txt  ballcutter.cpp  ballcutter.h  ballcutter.hpp  bullcutter.cpp  bullcutter.h  bullcutter.hpp  compositecutter.cpp  compositecutter.h  compositecutter.hpp  compoundcutter.cpp  compoundcutter.h  conecutter.cpp  conecutter.h  conecutter.hpp  cylcutter.cpp  cylcutter.h  cylcutter.hpp  ellipse.cpp  ellipse.h  ellipse.hpp  ellipseposition.cpp  ellipseposition.h  ellipseposition.hpp  epos.cpp  epos.h  millingcutter.cpp  millingcutter.h  millingcutter.hpp  millingcutter_py.h  millingcutter_py.hpp  millingcutter_wrap.h  oellipse.cpp  oellipse.h
src/cxxlib/: cxxlib.cmake
src/deb/: DebSourcePPA.cmake  debian_copyright.txt  package_details.cmake  readme_debian.txt
src/dropcutter/: CMakeLists.txt  adaptivepathdropcutter.cpp  adaptivepathdropcutter.h  adaptivepathdropcutter.hpp  adaptivepathdropcutter_py.h  adaptivepathdropcutter_py.hpp  batchdropcutter.cpp  batchdropcutter.h  batchdropcutter.hpp  batchdropcutter_py.h  batchdropcutter_py.hpp  pathdropcutter.cpp  pathdropcutter.h  pathdropcutter.hpp  pathdropcutter_py.h  pathdropcutter_py.hpp  pointdropcutter.cpp  pointdropcutter.h  pointdropcutter.hpp
src/emscriptenlib/: browser.js  build.sh  emscriptenlib.cmake  emscriptenlib.cpp  index.html  index.js  opencamlib.js  opencamlib.wasm  package-lock.json  package.json  pre.js  server.py  test.js  test.src.js
src/geo/: CMakeLists.txt  arc.cpp  arc.h  arc.hpp  bbox.cpp  bbox.h  bbox.hpp  ccpoint.cpp  ccpoint.h  ccpoint.hpp  clpoint.cpp  clpoint.h  clpoint.hpp  line.cpp  line.h  line.hpp  path.cpp  path.h  path.hpp  path_py.h  path_py.hpp  point.cpp  point.h  point.hpp  stlreader.cpp  stlreader.hpp  stlsurf.cpp  stlsurf.h  stlsurf.hpp  stlsurf_py.h  stlsurf_py.hpp  triangle.cpp  triangle.h  triangle.hpp  triangle_py.h  triangle_py.hpp
src/lib/: STLTools.py  camvtk.py  ocl.py  procmemory.py  pyocl.py
src/nodejslib/: adaptivepathdropcutter_js.cpp  adaptivepathdropcutter_js.hpp  adaptivewaterline_js.cpp  adaptivewaterline_js.hpp  ballcutter_js.cpp  ballcutter_js.hpp  bbox_js.cpp  bbox_js.hpp  build.sh  bullcutter_js.cpp  bullcutter_js.hpp  conecutter_js.cpp  conecutter_js.hpp  cylcutter_js.cpp  cylcutter_js.hpp  index.js  line_js.cpp  line_js.hpp  nodejslib.cmake  nodejslib.cpp  nodemodule.cmake  opencamlib.darwin.node  package-lock.json  package.json  path_js.cpp  path_js.hpp  pathdropcutter_js.cpp  pathdropcutter_js.hpp  point_js.cpp  point_js.hpp  stlreader_js.cpp  stlreader_js.hpp  stlsurf_js.cpp  stlsurf_js.hpp  test.js  triangle_js.cpp  (+4 more)
(+622 files in other folders)
