[project]
name = "opencamlib"
version = "2022.12.8"
description = "open source computer aided manufacturing algorithms library"
readme = "README.rst"
authors = [
  { name = "Anders Wallin", email="anders.e.e.wallin@gmail.com" }
]
maintainers = [
  { name = "Koen Schmeets", email="koen@schmeets.de" }
]
license = { file = "COPYING" }
requires-python = ">=3.6"
keywords = ["cam", "cnc", "waterline", "axial tool projection"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
  "Intended Audience :: Manufacturing"
]

[project.urls]
homepage = "https://github.com/aewallin/opencamlib"
documentation = "https://github.com/aewallin/opencamlib"
repository = "https://github.com/aewallin/opencamlib"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.verbose = true
logging.level = "DEBUG"
wheel.packages = ["src/pythonlib/opencamlib"]

[tool.scikit-build.cmake.define]
BUILD_PY_LIB = "ON"
USE_OPENMP = "ON"

[tool.cibuildwheel]
build = ["cp37*", "cp38*", "cp39*", "cp310*", "cp311*"]
skip = ["pp*", "*-musllinux*", "*-manylinux_i686"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86", "ARM64"]
before-all = "cd {package} && bash ./scripts/ci/cibw_before_all_windows.sh"
before-build = "cd {package} && bash ./scripts/ci/cibw_before_build_windows.sh"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
before-all = "cd {package} && bash ./scripts/ci/cibw_before_all_linux.sh"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-all = "cd {package} && bash ./scripts/ci/cibw_before_all_macos.sh"
before-build = "cd {package} && bash ./scripts/ci/cibw_before_build_macos.sh"
