[project]
name = "opencamlib"
version = "2022.12.18"
description = "open source computer aided manufacturing algorithms library"
readme = "README.rst"
authors = [
  { name = "Anders Wallin", email="anders.e.e.wallin@gmail.com" }
]
maintainers = [
  { name = "Koen Schmeets", email="koen@schmeets.de" }
]
license = { file = "COPYING" }
requires-python = ">=3.6"
keywords = ["cam", "cnc", "waterline", "axial tool projection"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
  "Intended Audience :: Manufacturing"
]

[project.urls]
homepage = "https://github.com/aewallin/opencamlib"
documentation = "https://github.com/aewallin/opencamlib"
repository = "https://github.com/aewallin/opencamlib"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.verbose = true
logging.level = "DEBUG"
wheel.packages = ["src/pythonlib/opencamlib"]

[tool.scikit-build.cmake.define]
BUILD_PY_LIB = "ON"
Boost_ADDITIONAL_VERSIONS = "1.80.0;1.79.0;1.78.0;1.77.0;1.76.0;1.75.0;1.74.0;1.73.0;1.72.0;1.71.0;1.70.0"
BUILD_DOC = "OFF"

[tool.cibuildwheel]
build = ["cp37*", "cp38*", "cp39*", "cp310*", "cp311*"]
skip = ["pp*", "*-musllinux*", "*-manylinux_i686"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86", "ARM64"]
before-all = "cd {package} && bash ./install.sh --install-ci-deps"
before-build = "cd {package} && bash ./install.sh --install-boost --boost-with-python --python-executable python"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
before-all = "cd {package} && bash ./install.sh --install-ci-deps"
before-build = "cd {package} && bash ./install.sh --install-boost --boost-with-python --python-executable python && cp --recursive --no-clobber boost_1_80_0 /host/home/runner/work/opencamlib/opencamlib"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-all = "cd {package} && bash ./install.sh --install-ci-deps"
before-build = "cd {package} && bash ./install.sh --install-boost --boost-with-python --python-executable python"
repair-wheel-command = "python src/pythonlib/delocate-wheel.py --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
