[metadata]
name = opencamlib
description = open source computer aided manufacturing algorithms library
author = Anders Wallin
author_email = anders.e.e.wallin@gmail.com
maintainer = Koen Schmeets
maintainer_email = koen@schmeets.de
long_description_file = file: README.rst
url = https://github.com/aewallin/opencamlib
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Manufacturing
project_urls =
    homepage = https://github.com/aewallin/opencamlib
    documentation = https://github.com/aewallin/opencamlib
    repository = https://github.com/aewallin/opencamlib

[options]
package_dir=
    opencamlib=src/pythonlib/opencamlib
packages = opencamlib
python_requires = >=3.7
include_package_data = True
zip_safe = False
